--- a/demoProject/pom.xml
+++ b/demoProject/pom.xml
@@ -111,8 +111,9 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.1</version>
             <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
+                <source>11</source>
+                <target>11</target>
+		<release>11</release>
             </configuration>
 	</plugin>
       <plugin>
